src/Validator/Spec/Error/InvalidDoctypeHtml.php
<?php

/**
 * DO NOT EDIT!
 * This file was automatically generated via bin/generate-validator-spec.php.
 */

namespace AmpProject\Validator\Spec\Error;

use AmpProject\Validator\Spec\Error;
use AmpProject\Validator\Spec\SpecRule;

final class InvalidDoctypeHtml extends Error
{
    /**
     * Code of the error.
     *
     * @var string
     */
    const CODE = 'INVALID_DOCTYPE_HTML';

    /**
     * Array of spec data.
     *
     * @var array<array>
     */
    const SPEC = [
        SpecRule::FORMAT => 'Invalid or missing doctype declaration. Should be \'!doctype html\'.',
        SpecRule::SPECIFICITY => 128,
    ];
}
